# yolo-pipeline

./: .gitignore  README.md  env.sh  install.sh  project_env.py  pyproject.toml  requirements.txt  train.sh
pipeline/: __init__.py  config.py  yolo_dataset.py  yolo_runner.py
tools/: README.md  batch_predict.py  compare_imgsz.py  compare_models.py  export_model.py  model_info.py  predict.py  train.py
weights/: README.md  download.sh
